// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SampleTooltipContents renders the CPU usage only when outside of the activity graph is hovered 1`] = `
<div
  class="tooltip"
  data-testid="tooltip"
  style="left: 11px; top: 10px;"
>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      CPU:
    </div>
    <div>
      28% (average over 1.0ms)
    </div>
  </div>
</div>
`;

exports[`SampleTooltipContents renders the sample tooltip properly 1`] = `
<div
  class="tooltip"
  data-testid="tooltip"
  style="left: 11px; top: 10px;"
>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Sampled at:
    </div>
    <div>
      0s
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Category:
    </div>
    <div>
      <span
        class="colored-square category-color-purple"
      />
      Layout
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Stack:
    </div>
  </div>
  <ul
    class="backtrace"
  >
    <li
      class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
    >
      <span
        class="colored-border category-color-purple"
        title="Layout"
      />
      nsRefreshDriver::AddStyleFlushObserver
      <em
        class="backtraceStackFrameOrigin"
      />
    </li>
    <li
      class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
    >
      <span
        class="colored-border category-color-grey"
        title="Other"
      />
      mozilla::GeckoRestyleManager::PostRestyleEvent
      <em
        class="backtraceStackFrameOrigin"
      />
    </li>
    <li
      class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
    >
      <span
        class="colored-border category-color-grey"
        title="Other"
      />
      mozilla::GeckoRestyleManager::ContentStateChanged
      <em
        class="backtraceStackFrameOrigin"
      />
    </li>
    <li
      class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
    >
      <span
        class="colored-border category-color-grey"
        title="Other"
      />
      mozilla::PresShell::ContentStateChanged
      <em
        class="backtraceStackFrameOrigin"
      />
    </li>
    <li
      class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
    >
      <span
        class="colored-border category-color-grey"
        title="Other"
      />
      nsDocument::ContentStateChanged
      <em
        class="backtraceStackFrameOrigin"
      />
    </li>
    <li
      class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
    >
      <span
        class="colored-border category-color-grey"
        title="Other"
      />
      mozilla::dom::Element::RemoveStates
      <em
        class="backtraceStackFrameOrigin"
      />
    </li>
    <li
      class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
    >
      <span
        class="colored-border category-color-grey"
        title="Other"
      />
      mozilla::EventStateManager::UpdateAncestorState
      <em
        class="backtraceStackFrameOrigin"
      />
    </li>
    <li
      class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
    >
      <span
        class="colored-border category-color-grey"
        title="Other"
      />
      mozilla::EventStateManager::SetContentState
      <em
        class="backtraceStackFrameOrigin"
      />
    </li>
    <li
      class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
    >
      <span
        class="colored-border category-color-grey"
        title="Other"
      />
      mozilla::EventStateManager::NotifyMouseOut
      <em
        class="backtraceStackFrameOrigin"
      />
    </li>
    <li
      class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
    >
      <span
        class="colored-border category-color-grey"
        title="Other"
      />
      mozilla::EventStateManager::GenerateMouseEnterExit
      <em
        class="backtraceStackFrameOrigin"
      />
    </li>
    <li
      class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
    >
      <span
        class="colored-border category-color-grey"
        title="Other"
      />
      mozilla::EventStateManager::PreHandleEvent
      <em
        class="backtraceStackFrameOrigin"
      />
    </li>
    <li
      class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
    >
      <span
        class="colored-border category-color-grey"
        title="Other"
      />
      mozilla::PresShell::HandleEventInternal
      <em
        class="backtraceStackFrameOrigin"
      />
    </li>
    <li
      class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
    >
      <span
        class="colored-border category-color-grey"
        title="Other"
      />
      mozilla::PresShell::HandlePositionedEvent
      <em
        class="backtraceStackFrameOrigin"
      />
    </li>
    <li
      class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
    >
      <span
        class="colored-border category-color-grey"
        title="Other"
      />
      mozilla::PresShell::HandleEvent
      <em
        class="backtraceStackFrameOrigin"
      />
    </li>
    <li
      class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
    >
      <span
        class="colored-border category-color-grey"
        title="Other"
      />
      nsViewManager::DispatchEvent
      <em
        class="backtraceStackFrameOrigin"
      />
    </li>
    <li
      class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
    >
      <span
        class="colored-border category-color-grey"
        title="Other"
      />
      nsView::HandleEvent
      <em
        class="backtraceStackFrameOrigin"
      />
    </li>
    <li
      class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
    >
      <span
        class="colored-border category-color-grey"
        title="Other"
      />
      nsChildView::DispatchEvent
      <em
        class="backtraceStackFrameOrigin"
      />
    </li>
    <li
      class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
    >
      <span
        class="colored-border category-color-grey"
        title="Other"
      />
      ChildViewMouseTracker::MouseMoved
      <em
        class="backtraceStackFrameOrigin"
      />
    </li>
    <li
      class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
    >
      <span
        class="colored-border category-color-grey"
        title="Other"
      />
      nsAppShell::Run
      <em
        class="backtraceStackFrameOrigin"
      />
    </li>
    <li
      class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
    >
      <span
        class="colored-border category-color-grey"
        title="Other"
      />
      nsAppStartup::Run
      <em
        class="backtraceStackFrameOrigin"
      />
    </li>
    <span
      class="colored-border ellipsis"
    />
    …
  </ul>
</div>
`;

exports[`SampleTooltipContents renders the sample with "variable CPU cycles" CPU usage information properly 1`] = `
<div
  class="tooltip"
  data-testid="tooltip"
  style="left: 11px; top: 10px;"
>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Sampled at:
    </div>
    <div>
      1ms
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      CPU:
    </div>
    <div>
      50% (average over 1.0ms)
    </div>
  </div>
  <div
    class="tooltipDetailSeparator"
  />
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Category:
    </div>
    <div>
      <span
        class="colored-square category-color-yellow"
      />
      JavaScript
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Stack:
    </div>
  </div>
  <ul
    class="backtrace"
  >
    <li
      class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
    >
      <span
        class="colored-border category-color-yellow"
        title="JavaScript"
      />
      Ejs
      <em
        class="backtraceStackFrameOrigin"
      />
    </li>
    <li
      class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
    >
      <span
        class="colored-border category-color-yellow"
        title="JavaScript"
      />
      F
      <em
        class="backtraceStackFrameOrigin"
      />
    </li>
    <li
      class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
    >
      <span
        class="colored-border category-color-yellow"
        title="JavaScript"
      />
      Cjs
      <em
        class="backtraceStackFrameOrigin"
      />
    </li>
    <li
      class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
    >
      <span
        class="colored-border category-color-grey"
        title="Other"
      />
      B
      <em
        class="backtraceStackFrameOrigin"
      />
    </li>
    <li
      class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
    >
      <span
        class="colored-border category-color-grey"
        title="Other"
      />
      A
      <em
        class="backtraceStackFrameOrigin"
      />
    </li>
  </ul>
</div>
`;

exports[`SampleTooltipContents renders the sample with ns CPU usage information properly 1`] = `
<div
  class="tooltip"
  data-testid="tooltip"
  style="left: 11px; top: 10px;"
>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Sampled at:
    </div>
    <div>
      1ms
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      CPU:
    </div>
    <div>
      70% (average over 1.0ms)
    </div>
  </div>
  <div
    class="tooltipDetailSeparator"
  />
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Category:
    </div>
    <div>
      <span
        class="colored-square category-color-yellow"
      />
      JavaScript
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Stack:
    </div>
  </div>
  <ul
    class="backtrace"
  >
    <li
      class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
    >
      <span
        class="colored-border category-color-yellow"
        title="JavaScript"
      />
      Ejs
      <em
        class="backtraceStackFrameOrigin"
      />
    </li>
    <li
      class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
    >
      <span
        class="colored-border category-color-yellow"
        title="JavaScript"
      />
      F
      <em
        class="backtraceStackFrameOrigin"
      />
    </li>
    <li
      class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
    >
      <span
        class="colored-border category-color-yellow"
        title="JavaScript"
      />
      Cjs
      <em
        class="backtraceStackFrameOrigin"
      />
    </li>
    <li
      class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
    >
      <span
        class="colored-border category-color-grey"
        title="Other"
      />
      B
      <em
        class="backtraceStackFrameOrigin"
      />
    </li>
    <li
      class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
    >
      <span
        class="colored-border category-color-grey"
        title="Other"
      />
      A
      <em
        class="backtraceStackFrameOrigin"
      />
    </li>
  </ul>
</div>
`;

exports[`SampleTooltipContents renders the sample with µs CPU usage information properly 1`] = `
<div
  class="tooltip"
  data-testid="tooltip"
  style="left: 11px; top: 10px;"
>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Sampled at:
    </div>
    <div>
      1ms
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      CPU:
    </div>
    <div>
      45% (average over 1.0ms)
    </div>
  </div>
  <div
    class="tooltipDetailSeparator"
  />
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Category:
    </div>
    <div>
      <span
        class="colored-square category-color-yellow"
      />
      JavaScript
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Stack:
    </div>
  </div>
  <ul
    class="backtrace"
  >
    <li
      class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
    >
      <span
        class="colored-border category-color-yellow"
        title="JavaScript"
      />
      Ejs
      <em
        class="backtraceStackFrameOrigin"
      />
    </li>
    <li
      class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
    >
      <span
        class="colored-border category-color-yellow"
        title="JavaScript"
      />
      F
      <em
        class="backtraceStackFrameOrigin"
      />
    </li>
    <li
      class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
    >
      <span
        class="colored-border category-color-yellow"
        title="JavaScript"
      />
      Cjs
      <em
        class="backtraceStackFrameOrigin"
      />
    </li>
    <li
      class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
    >
      <span
        class="colored-border category-color-grey"
        title="Other"
      />
      B
      <em
        class="backtraceStackFrameOrigin"
      />
    </li>
    <li
      class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
    >
      <span
        class="colored-border category-color-grey"
        title="Other"
      />
      A
      <em
        class="backtraceStackFrameOrigin"
      />
    </li>
  </ul>
</div>
`;
